crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__native_queries__select_artists_below_id.snap
---
source: crates/tests/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "AC/DC"
      },
      {
        "Name": "Accept"
      },
      {
        "Name": "Aerosmith"
      },
      {
        "Name": "Alanis Morissette"
      }
    ]
  }
]
